--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <meta charset="utf-8"/>
         <meta name="Tahfeez company for AI and IMB " content="Tahfeez for everu thing do you want from beasnesman">
 
-        
+        <link rel="stylesheet" href="style.css">
+
       
     </head>
 
 <body align="center" bgcolor="green">
 <font color="red" size="5" >
 <h1 size="5"><font color="yellow">  شـركـة تحفـيـز</font></h1>
+<p>الزعيم برهان الدين</p>
 
 <p size="7">  <details align="right" dir="rtl" style="color: rgb(245, 55, 8);">  <summary>كلمة المدير التنفيذي</summary>
         انا البرهان بن ماجد المدير التنفيذي لهذه الشركة الرائقة الرائعة
