--- a/index.html
+++ b/index.html
@@ -11,29 +11,27 @@
       
     </head>
 
-<body align="center" bgcolor="green">
-<font color="red" size="5" >
-<h1 size="5"><font color="yellow">  شـركـة تحفـيـز</font></h1>
-<p>الزعيم برهان الدين</p>
+<body>
+<h1> شـركـة تحفـيـز</h1>
 
-<p size="7">  <details align="right" dir="rtl" style="color: rgb(245, 55, 8);">  <summary>كلمة المدير التنفيذي</summary>
+<details>  <summary align="right" >كلمة المدير التنفيذي</summary>
         انا البرهان بن ماجد المدير التنفيذي لهذه الشركة الرائقة الرائعة
    والحمدلله الذي وفقني اليها وبفضل الله استطعت الوصول الى هذا المقام بفضل الله اولا واخيرا والحمدلله
     حمدا كثيرا طيبا مباركا فيه
-</details>  </p>
+</details> 
 
 <p> <font size="7" color="yellow"> سنوات من الخبرة واللإبداع والقوة والسرعة</font> </p>
 
-<p>       <a href="TAHFEEZ1.html" target="_blank">tahfeez1</a></p>
+<p>       <a href="TAHFEEZ1.html" target="_blank">detail</a></p>
+<p>       <a href="crud.html" target="_blank">our work</a></p>
 
-</font>
 
-    
-<form>
+    <div class="burhan"><form>
     <input type="email" placeholder="email or phon number"> <br>
     <input type="password" placeholder="password"> <br>
     <button type="submit">clik here</button><br>
-    </form>
+    </form></div>
+
 
 
 </body>
