--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
    <br>
    <br>
    <br>
-    <h1>مرحبًا <span id="userEmail"></span>!</h1>
+    <h1>مرحبًا <span id="userEmail"></span>عميلنا الجديد </h1>
 
     <script>
         // عرض البريد الإلكتروني للمستخدم
