--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
    <br>
    <br>
    <br>
-    <h1>مرحبًا <span id="userEmail"></span>عميلنا الجديد </h1>
+    <h1>مرحبًا <span id="userEmail"></span> عميلنا الجديد </h1>
 
     <script>
         // عرض البريد الإلكتروني للمستخدم
@@ -72,8 +72,8 @@
          </ol>
    </details>
    
-  
-        <button onclick="logout()">تسجيل الخروج</button>
+   <p>       <a href="crud.html" target="_blank">our work</a></p>
+   <button onclick="logout()">تسجيل الخروج</button>
 
    
 </body>
