--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 </head>
 <body>
+    <img src="tahfee5.png" alt="tahfeez" height="250" width="100%">
+
     <h1> شـركـة تحفـيـز</h1>
 
     <details>  <summary align="right" >كلمة المدير التنفيذي</summary>
@@ -30,12 +32,11 @@
     <br>
     <br>
     <hr>
-    <p> <font size="7" color="red"> سنوات من الخبرة واللإبداع والقوة والسرعة</font> </p>
+    <br>
+    <p> <font size="7" color="blue"> سنوات من الخبرة واللإبداع والقوة والسرعة</font> </p>
     
-    <p>       <a href="TAHFEEZ1.html" target="_blank">detail</a></p>
-    <p>       <a href="crud.html" target="_blank">our work</a></p>
 
-    
+
     <div class="login-box">
         <h2>مرحبًا بك</h2>
         <h2> سجل دخولك</h2>
